EOS-544 fixed distortion columns

--- a/src/styles/_node-list.component.scss
+++ b/src/styles/_node-list.component.scss
@@ -49,6 +49,11 @@
             padding-top: 14px;
         }
 
+        .foolder {
+            margin-top: 7px;
+            margin-left: 14px;
+        }
+
         .spinner {
             margin-top: 10px;
             width: 48px;
